--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-	<?php
-		echo "netanel's index."
-	?>
+	<title>netanel's index</title>
+	<body>This is netanel's index</body>
 </html>
