--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<title>netanel's index</title>
-	<body>This is netanel's index</body>
+	<body>
+        <p>There is nothing here. 
+           Hopefully it will be something really cool, really soon. :)</p>
+    </body>
 </html>
