--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 	<title>netanel's index</title>
 	<body>
-        <p>There is nothing here. 
-           Hopefully it will be something really cool, really soon. :)</p>
+        <h1>There is nothing here. 
+           Hopefully it will be something really cool, really soon. :)</h1>
+        <p>
+            <img src="Balloon_OS.jpg" alt="Balloon OS">
+        </p>
     </body>
 </html>
