--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<title>netanel's index</title>
-	<body>
+	<center><body>
         <h1>There is nothing here. 
            Hopefully it will be something really cool, really soon. :)</h1>
         <p>
             <img src="Balloon_OS.jpg" alt="Balloon OS" align="middle">
         </p>
-    </body>
+    </body></center>
 </html>
