--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <h1>There is nothing here. 
            Hopefully it will be something really cool, really soon. :)</h1>
         <p>
-            <img src="Balloon_OS.jpg" alt="Balloon OS" align="middle">
+            <img src="Balloon_OS.jpg" alt="Balloon OS" align="middle" style="width:128px;height:128px">
         </p>
     </body></center>
 </html>
