--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<title>netanel's index</title>
-	<center><body>
+	<center>
+	<body>
         <h1>There is nothing here. 
            Hopefully it will be something really cool, really soon. :)</h1>
         <p>
             <img src="Balloon_OS.jpg" alt="Balloon OS" align="middle">
         </p>
-    </body></center>
+    </body>
+	<footer>
+		<p>A DIVISION OF BEDOON, INC &reg;</p>
+	</footer>
+	</center>
 </html>
