--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </p>
     </body>
 	<footer>
-		<p>A DIVISION OF BEDOON, INC &reg;</p>
+		<p>A DIVISION OF <b>BEDOON, INC &reg;</b></p>
 	</footer>
 	</center>
 </html>
